Initial patch to support GNU-style long form options